[package]
name = "oauth-certs"
version = "0.3.0"
edition = "2021"
description = """
The project fetches oauth certificates from providers during runtime and stores them in static Read / Write lock.
"""
documentation = "https://docs.rs/oauth-certs"
homepage = "https://github.com/pagescrape/oauth-certs"
license = "MIT"
repository = "https://github.com/pagescrape/oauth-certs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = { version = "8", default-features = false }
serde_json = "1"
once_cell = "1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "gzip", "json"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["sync", "macros"]
